--- a/projet_2020/resources/sass/_nav.scss
+++ b/projet_2020/resources/sass/_nav.scss
@@ -90,7 +90,7 @@ li:nth-child(5), li:nth-child(4){
 }
 
 /* VERSION MOBILE */
-@media all and (max-width: 900px) {
+@media #{$mobile} {
     nav {
         ul {
             display:flex;
