--- a/projet_2020/resources/sass/_variables.scss
+++ b/projet_2020/resources/sass/_variables.scss
@@ -53,3 +53,6 @@ $gray: #808080;
 $lightgray: #d4d4d4;
 $superlightgray: #ececec;
 $smoke:  #fafafa;
+
+
+$mobile: "all and(max-width: 900px)";
